--- a/app/views/group/view.html.erb
+++ b/app/views/group/view.html.erb
@@ -2,12 +2,12 @@
     <H1 class='pagetitle'>View This Group</H1>
     <br>
     <div class="container">
-        <div class='groupcontainer'>
+        <div id="groupcontainer" class='groupcontainer table table-hover table-bordered table-dark table-responsive table-condensed'>
             <H2 class='pagetitle'>View Group</H2>
             <br>
             <center>
                 <table id="groupmembertable">
-                    <thead>
+                    <thead class="thead-dark">
                         <th><a class="UP" onclick="sortGroupTableByColumn(0,'groupmembertable')" href="javascript:void(0);">Member Name</a></th>
                         <th><a class="UP" onclick="sortGroupTableByColumn(1,'groupmembertable')" href="javascript:void(0);">Member Score</a></th>
                         <th><a class="UP" onclick="sortGroupTableByColumn(2,'groupmembertable',false,true)" href="javascript:void(0);">Last Activity</a></th>
