Group table is now pagified.

--- a/app/views/group/index.html.erb
+++ b/app/views/group/index.html.erb
@@ -60,6 +60,7 @@
                     </tbody>
                 </table>
             <% end %>
+            <p id="pageLinks"></p>
             <br>
             <%= render "shared/links" %>
         </div>
