Fixed bootstrapping issues preventing group messaging from going forward.

--- a/app/views/group/edit.html.erb
+++ b/app/views/group/edit.html.erb
@@ -6,8 +6,8 @@
             <H2 class='pagetitle'>Edit Group</H2>
             <br>
             <center>
-                <table id="groupAdminTable" class="table table-hover table-bordered table-dark table-responsive table-condensed">
-                    <thead class="thead-dark">
+                <table id="groupAdminTable" class="table table-hover table-bordered table-condensed">
+                    <thead class="thead-light">
                         <th><a class="UP" onclick="sortGroupTableByColumn(0,'groupAdminTable')" href="javascript:void(0);">Member Name</a></th>
                         <th><a class="UP" onclick="sortGroupTableByColumn(1,'groupAdminTable')" href="javascript:void(0);">Member Score</a></th>
                         <th><a class="UP" onclick="sortGroupTableByColumn(2,'groupAdminTable',false,true)" href="javascript:void(0);">Last Activity</a></th>
