--- a/app/views/group/view.html.erb
+++ b/app/views/group/view.html.erb
@@ -6,8 +6,8 @@
             <H2 class='pagetitle'>View Group</H2>
             <br>
             <center>
-                <table id="groupmembertable">
-                    <thead class="thead-dark">
+                <table id="groupmembertable" class="table table-hover table-bordered table-condensed">
+                    <thead class="thead-light">
                         <th><a class="UP" onclick="sortGroupTableByColumn(0,'groupmembertable')" href="javascript:void(0);">Member Name</a></th>
                         <th><a class="UP" onclick="sortGroupTableByColumn(1,'groupmembertable')" href="javascript:void(0);">Member Score</a></th>
                         <th><a class="UP" onclick="sortGroupTableByColumn(2,'groupmembertable',false,true)" href="javascript:void(0);">Last Activity</a></th>
@@ -55,6 +55,11 @@
                     </tbody>
                 </table>
             </center>
+            <br>
+            <br>
+            <div id="messageContainer">
+                
+            </div>
             <br>
             <p class="link"><%= link_to 'Back', url_for(:back), :class => 'backitem'%></p>
         </div>
