Adding more bootstrap buttons

--- a/app/views/activity/new.html.erb
+++ b/app/views/activity/new.html.erb
@@ -30,8 +30,12 @@
                 </div>
                 <br>
                 <br>
-                <div class="buttonpanel">
-                    <%= image_submit_tag "button_log_data.png", :class => 'submitbutton' %>
+                <br>
+                <br>
+                <br>
+                <div class="gradient-buttons">
+                    <Button type="submit" class='btn center-block btn-lg btn-primary'>Log Data</Button>
+                    
                 </div>
             <% end%>
         </div>
