--- a/app/views/activity_type/new.html.erb
+++ b/app/views/activity_type/new.html.erb
@@ -64,8 +64,9 @@
                     <%= number_field 'activitytypes', 'score', :step => 'any', :size => 10, :required => true %>
                 </div>
                 <br>
-                <div class="buttonpanel">
-                    <%= image_submit_tag "button_create_new_activity_type.png", :class => 'submitbutton'%>
+                <div class="gradient-buttons">
+                    <Button type="submit" class='btn center-block btn-lg btn-primary'>Create New Activity Type</Button>
+                    
                 </div>
             <% end %>
         </div>
