--- a/app/assets/stylesheets/activity.scss
+++ b/app/assets/stylesheets/activity.scss
@@ -19,3 +19,7 @@
   border: 1px solid #0ad;
   margin-bottom: 12px;
 }
+.gradient-buttons .btn {
+background-image: linear-gradient(to bottom, rgba(255,255,255,0.5), rgba(255,255,255,0.2) 49%, rgba(0,0,0,0.15) 51%, rgba(0,0,0,0.05));
+background-repeat: repeat-x;
+}
