--- a/app/views/group/view.html.erb
+++ b/app/views/group/view.html.erb
@@ -58,8 +58,33 @@
             <br>
             <br>
             <div id="messageContainer">
-                
+                <H4 class="justify-content-center">Messages for <%= @group.name %></H4>
+                <div class="row">
+                        <table id="messageTable" class="table table-striped table-hover table-borderless table-sm">
+                            <tbody>
+                                <% @messages.each do |msg|%>
+                                    <tr>
+                                        <% if msg.userid == current_user.id %>
+                                            <td class="username">You:</td>
+                                        <% else %>
+                                            <td class="username"><%= msg.userName%></td>
+                                        <% end %>
+                                        <td class="message col-sm-10 text-sm-left"><%= msg.message %></td>
+                                    </tr>
+                                <% end %>
+                            </tbody>
+                        </table>
+                </div>
             </div>
+            <div class="form-group row">
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="messageInput">
+                </div>
+                <div class="col-sm-2">
+                    <button type="button" class="btn btn-light" onclick="submitMessage()">Submit Message</button>
+                </div>
+            </div>
+            <br>
             <br>
             <p class="link"><%= link_to 'Back', url_for(:back), :class => 'backitem'%></p>
         </div>
