--- a/app/views/group/view.html.erb
+++ b/app/views/group/view.html.erb
@@ -2,7 +2,7 @@
     <H1 class='pagetitle'>View This Group</H1>
     <br>
     <div class="container">
-        <div id="groupcontainer" class='groupcontainer table table-hover table-bordered table-dark table-responsive table-condensed'>
+        <div id="groupcontainer" class='groupcontainer table table-hover table-bordered table-responsive table-condensed'>
             <H2 class='pagetitle'>View Group</H2>
             <br>
             <center>
