Fixed a large amount of bugs

--- a/app/views/activity_type/index.html.erb
+++ b/app/views/activity_type/index.html.erb
@@ -10,7 +10,7 @@
                 <% else %>
                     <H2 class='pagetitle'>Existing Activity Types</H2>
                     <br>
-                    <table class="table table-hover table-bordered table-dark table-responsive table-condensed">
+                    <table class="table table-hover table-bordered table-responsive table-condensed">
                         <thead class="thead-dark">
                             <tr>
                                 <th>Name</th>
