--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -44,11 +44,21 @@
                 </thead>
                 
                 <tbody>
+                    <% @n = 0 %>
                     <% @acts.each do |act| %>
-                        <% if act.userid == current_user.id %>
-                            <tr class = "table-primary">
+                        <% @n = @n+1 %>
+                        <% unless @n > 25 %>
+                            <% if act.userid == current_user.id %>
+                                <tr class = "table-primary">
+                            <% else %>
+                                <tr class="table-info">
+                            <% end %>
                         <% else %>
-                            <tr class="table-info">
+                            <% if act.userid == current_user.id %>
+                                <tr class = "table-primary" style="display: none;">
+                            <% else %>
+                                <tr class="table-info" style="display: none;">
+                            <% end %>
                         <% end %>
                             <td><p class="name"><%= link_to act.name, {:action => 'show', :id => act.id} %></p></td>
                             <td><p class="duration"><%= act.duration %></p></td>
@@ -65,7 +75,18 @@
             </div>
             <br>
             <ul id="pageLinks" class="pagination justify-content-center">
-              
+                <% @pages = (@n/25).ceil %>
+                <% (1..@pages).each do |i| %>
+                    <% if i == 1 %>
+                        <li class="page-item active">
+                    <% else %>
+                        <li class="page-item">
+                    <% end %>
+                    <%= content_tag :a, :class => "page-link", :href =>"javascript:void(0)", :onclick => "setActivityTableRows("+i.to_s+",25)" do %>
+                        <%= i %>&nbsp
+                    <% end %>
+                    </li>
+                <% end %>
             </ul>
             <br>
             <%= render "shared/links" %>
