Added a LOT of buttons from bootstrap

--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -17,8 +17,8 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
+  <div class="actions gradient-buttons">
+    <%= f.submit "Change my password", :class => "button btn-sm btn-light"  %>
   </div>
 <% end %>
 
