--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -8,8 +8,8 @@
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+  <div class="actions gradient-buttons">
+    <%= f.submit "Send me reset password instructions", :class => "button btn-sm btn-light" %>
   </div>
 <% end %>
 
