--- a/app/views/group/view.html.erb
+++ b/app/views/group/view.html.erb
@@ -80,8 +80,8 @@
                 <div class="col-sm-10">
                     <input type="text" class="form-control" id="messageInput">
                 </div>
-                <div class="col-sm-2">
-                    <button type="button" class="btn btn-light" onclick="submitMessage()">Submit Message</button>
+                <div class="col-sm-2 gradient-buttons">
+                    <button type="button" class="btn btn-md btn-primary" onclick="submitMessage()">Submit Message</button>
                 </div>
             </div>
             <br>
