--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -38,6 +38,11 @@
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>Unhappy?
+  <div class="gradient-buttons">
+    <%= button_to "Cancel my account", registration_path(resource_name),data: { confirm: "Are you sure?" }, :method => 'delete', :type => 'button', :class => 'btn btn-lg btn-primary' %>
+  </div>
+</p>
+  
 
 <%= link_to "Back", :back %>
