Added missing buttons

--- a/app/views/activity/new.html.erb
+++ b/app/views/activity/new.html.erb
@@ -34,7 +34,7 @@
                 <br>
                 <br>
                 <div class="gradient-buttons">
-                    <Button type="submit" class='btn center-block btn-lg btn-primary'>Log Data</Button>
+                    <button type="submit" class='btn center-block btn-lg btn-primary'>Log Data</Button>
                     
                 </div>
             <% end%>
