--- a/app/views/group/edit.html.erb
+++ b/app/views/group/edit.html.erb
@@ -94,7 +94,7 @@
                 <p>Group Password (Leave blank if you do not wish to change): <%= g.password_field 'password', :size => 50%></p>
                 <br>
                 <div class = "gradient-buttons">
-                    <%= button_to "Save Changes", new_user_session_path, :method => 'post', :type => 'button', :class => 'btn btn-lg btn-primary' %>
+                    <button type="submit" class='btn btn-lg btn-primary'>Submit Changes</button>
                 </div>
             <% end %>
             <br>
