--- a/app/views/group/show.html.erb
+++ b/app/views/group/show.html.erb
@@ -9,7 +9,7 @@
             <%= form_for @group, :url => {:action => 'join', :id => @group.id} do |g| %>
                 <p>Enter Group Password to Join: <%= g.password_field 'password'%></p>
                 <br>
-                <%= image_submit_tag "button_join_group.png", :class => 'submitbutton' %>
+                <button type="submit" class='btn btn-lg btn-primary'>Join Group</button>
             <% end %>
         </div>
     </div>
