--- a/app/views/group/index.html.erb
+++ b/app/views/group/index.html.erb
@@ -61,12 +61,10 @@
                                     <div class="modal-dialog">
                                         <div class="modal-content">
                                             <div class="modal-header">
-                                                <h4 class="modal-title">Modal Heading</h4>
+                                                <h4 class="modal-title">Join Group: <%= group.name %></h4>
                                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                                             </div>
                                             <div class="modal-body">
-                                                <H2 class='pagetitle'>Join Group: <%= group.name %></H2>
-                                                <br>
                                                 <H3><%= group.description %></H3>
                                                 <%= form_for group, :url => {:action => 'join', :id => group.id} do |g| %>
                                                     <p>Enter Group Password to Join: <%= g.password_field 'password'%></p>
