--- a/app/views/group/view.html.erb
+++ b/app/views/group/view.html.erb
@@ -3,58 +3,61 @@
     <br>
     <div class="container">
         <div id="groupcontainer" class='groupcontainer'>
-            <H2 class='pagetitle'>View Group</H2>
-            <br>
-            <center>
-                <table id="groupmembertable" class="table table-hover table-bordered table-condensed">
-                    <thead class="thead-light">
-                        <th><a class="UP" onclick="sortGroupTableByColumn(0,'groupmembertable')" href="javascript:void(0);">Member Name</a></th>
-                        <th><a class="UP" onclick="sortGroupTableByColumn(1,'groupmembertable')" href="javascript:void(0);">Member Score</a></th>
-                        <th><a class="UP" onclick="sortGroupTableByColumn(2,'groupmembertable',false,true)" href="javascript:void(0);">Last Activity</a></th>
-                    </thead>
-                    <tbody>
-                        <% @users.each do |user| %>
-                            <% if user.id == current_user.id %>
-                                <tr class="curgroup">
-                                    <td><%= user.full_name %></td>
-                                    <% if @scores[user.id]==nil %>
-                                        <td>Has done nothing</td>
-                                    <% elsif @scores[user.id]==0%>
-                                        <td>Has done nothing</td>
-                                    <% else %>
-                                        <td><%= user.score.round(4) %></td>
-                                    <% end %>
-                                    <% if user.lastActivity == nil %>
-                                        <td id="1e100000"><%= user.full_name %> has not yet participated.</td>
-                                    <% else %>
-                                        <%= content_tag :td, :id =>user.lastActivity.created_at do %>
-                                            <%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%>
+            <div id="collapsableGroupContainer" class="collapse">
+                <H2 class='pagetitle'>View Group</H2>
+                <br>
+                <center>
+                    <table id="groupmembertable" class="table table-hover table-bordered table-condensed">
+                        <thead class="thead-light">
+                            <th><a class="UP" onclick="sortGroupTableByColumn(0,'groupmembertable')" href="javascript:void(0);">Member Name</a></th>
+                            <th><a class="UP" onclick="sortGroupTableByColumn(1,'groupmembertable')" href="javascript:void(0);">Member Score</a></th>
+                            <th><a class="UP" onclick="sortGroupTableByColumn(2,'groupmembertable',false,true)" href="javascript:void(0);">Last Activity</a></th>
+                        </thead>
+                        <tbody>
+                            <% @users.each do |user| %>
+                                <% if user.id == current_user.id %>
+                                    <tr class="curgroup">
+                                        <td><%= user.full_name %></td>
+                                        <% if @scores[user.id]==nil %>
+                                            <td>Has done nothing</td>
+                                        <% elsif @scores[user.id]==0%>
+                                            <td>Has done nothing</td>
+                                        <% else %>
+                                            <td><%= user.score.round(4) %></td>
                                         <% end %>
-                                    <% end %>
-                                </tr>
-                            <% else %>
-                                <tr>
-                                    <td><%= user.full_name %></td>
-                                    <% if @scores[user.id]==nil %>
-                                        <td>Has done nothing</td>
-                                    <% elsif @scores[user.id]==0%>
-                                        <td>Has done nothing</td>
-                                    <% else %>
-                                        <td><%= user.score.round(4) %></td>
-                                    <% end %>
-                                    <% if user.lastActivity == nil %>
-                                        <td id="1e100000"><%= user.full_name %> has not yet participated.</td>
-                                    <% else %>
-                                        <%= content_tag :td, :id =>user.lastActivity.created_at do %>
-                                            <%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%>
+                                        <% if user.lastActivity == nil %>
+                                            <td id="1e100000"><%= user.full_name %> has not yet participated.</td>
+                                        <% else %>
+                                            <%= content_tag :td, :id =>user.lastActivity.created_at do %>
+                                                <%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%>
+                                            <% end %>
                                         <% end %>
-                                    <% end %>
-                                </tr>
+                                    </tr>
+                                <% else %>
+                                    <tr>
+                                        <td><%= user.full_name %></td>
+                                        <% if @scores[user.id]==nil %>
+                                            <td>Has done nothing</td>
+                                        <% elsif @scores[user.id]==0%>
+                                            <td>Has done nothing</td>
+                                        <% else %>
+                                            <td><%= user.score.round(4) %></td>
+                                        <% end %>
+                                        <% if user.lastActivity == nil %>
+                                            <td id="1e100000"><%= user.full_name %> has not yet participated.</td>
+                                        <% else %>
+                                            <%= content_tag :td, :id =>user.lastActivity.created_at do %>
+                                                <%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%>
+                                            <% end %>
+                                        <% end %>
+                                    </tr>
+                                <% end %>
                             <% end %>
-                        <% end %>
-                    </tbody>
-                </table>
-            </center>
+                        </tbody>
+                    </table>
+                </center>
+            </div>
+            <button type="button" class="btn btn-large btn-primary" data-toggle="collapse" data-target="#collapsableGroupContainer">View Group Members</button>
             <br>
             <br>
             <div id="messageContainer">
@@ -76,11 +79,9 @@
                         </table>
                 </div>
             </div>
-            <div class="form-group row">
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="messageInput">
-                </div>
-                <div class="col-sm-2 gradient-buttons">
+            <div class="input-group">
+                <input type="text" class="form-control" id="messageInput">
+                <div class="input-group-append gradient-buttons">
                     <button type="button" class="btn btn-md btn-primary" onclick="submitMessage()">Submit Message</button>
                 </div>
             </div>
