--- a/app/views/activity_type/index.html.erb
+++ b/app/views/activity_type/index.html.erb
@@ -43,7 +43,7 @@
                     </center>
                     <H2 class='pagetitle'>Existing Activity Types</H2>
                         <br>
-                        <table id='activitytypetable' class='table table-hover table-bordered table-dark table-responsive table-condensed'>
+                        <table id='activitytypetable' class='table table-hover table-bordered table-condensed'>
                             <% if @groupAdminID == current_user.id %>
                                 <thead class="thead-light">
                                     <tr>
