--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -17,12 +17,16 @@
             <%end%>
         <% else %>
             <center>
-                <input type="text" id="activitySearchInput" class="searchBar" onkeyup="activitySearch()" placeholder="Search for an entry..." title="Search here">
-                <select id='activitySearchSelect' class='selectBar' onchange="activitySearch()">
-                    <option>Activity Type</option>
-                    <option>Duration</option>
-                    <option>Person Who Done It</option>
-                </select>
+                <div class="input-group mb-3 justify-content-center">
+                    <input type="text" id="activitySearchInput" class="searchBar" onkeyup="activitySearch()" placeholder="Search for an entry..." title="Search here">
+                    <div class="input-group-append">
+                        <select id='activitySearchSelect' class='selectBar' onchange="activitySearch()">
+                            <option>Activity Type</option>
+                            <option>Duration</option>
+                            <option>Person Who Done It</option>
+                        </select>
+                    </div>
+                </div>
             </center>
             
             
