--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -49,27 +49,33 @@
                     <% @acts.each do |act| %>
                         <% @n = @n+1 %>
                         <% unless @n > 25 %>
-                            <% if act.userid == current_user.id %>
-                                <tr class = "table-primary">
-                            <% else %>
-                                <tr class="table-info">
-                            <% end %>
+                            <% @dsp = "" %>
                         <% else %>
-                            <% if act.userid == current_user.id %>
-                                <tr class = "table-primary" style="display: none;">
-                            <% else %>
-                                <tr class="table-info" style="display: none;">
-                            <% end %>
+                            <% @dsp = "none" %>
                         <% end %>
-                            <td><p class="name"><%= link_to act.name, {:action => 'show', :id => act.id} %></p></td>
-                            <td><p class="duration"><%= act.duration %></p></td>
+                        <% if act.userid == current_user.id %>
+                            <% @cls = "table-primary" %>
+                        <% else %>
+                            <% @cls = "table-info" %>
+                        <% end %>
+                        <%= content_tag :tr, :class => @cls, :id => "act#{act.id}", :style => "display:#{@dsp}" do %>
+                            <td><p class="name">
+                                <%= content_tag :a, :name => "#{act.name}", :href => "javascript:void(0)", :onclick => "getActivity(#{act.id})", :data => {:toggle => "modal", :target => "#viewActivityModal"} do %>
+                                    <%= act.name %>
+                                <% end %>
+                                </p></td>
+                            <td>
+                                <%= content_tag :p, :class => "duration", :name => act.duration do %>
+                                    <%= act.duration %>
+                                <% end %>
+                            </td>
                             <td><p class="user"><%= act.userName %></p></td>
                             <td><%= content_tag :p, :id => act.created_at, :class => "timestamp" do %> 
                                     <%= act.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M") %> 
                                 <% end %>
                             </p></td>
                             <td><p class="timestamp"><%= act.created_at.in_time_zone("Central Time (US & Canada)").strftime("%a, %m/%d/%y") %></p></td>
-                        </tr>
+                        <% end %>
                     <% end %>
                 </tbody>
               </table>
@@ -99,50 +105,86 @@
 </div>
 <div id="newActivityModal" class="modal fade">
     <div class="modal-dialog">
-    <div class="modal-content">
-
-      <div class="modal-header">
-        <h4 class="modal-title">Modal Heading</h4>
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-      </div>
-
-      <div class="modal-body">
-            <% if current_user.groupid == nil %>
-                <p class="warn">
-                    You are currently not a member of any group. Activities that you 
-                    log now will not be available to you once you join a group.
-                </p>
-                <br>
-            <% end %>
-            <%= form_tag onsubmit="submitNewActivity()" do %>
-                <div class='activitypanel'>
-                    <div class="activity_feature">
-                        <p><label for = "activity_type">Select Activity Type: </label></p>
-                        <%= collection_select(:activities, :actid, @act_types, :id, :name)%>
-                    </div>
-                    <div class="activity_feature">
-                        <p><label for = "activity_duration">Enter Activity Duration in Minutes: </label></p>
-                        <%= number_field 'activities', 'duration', :required => true, :step=>'any' %>
+        <div class="modal-content">
+    
+          <div class="modal-header">
+            <h4 class="modal-title">Log New Activity</h4>
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+          </div>
+    
+          <div class="modal-body">
+                <% if current_user.groupid == nil %>
+                    <p class="warn">
+                        You are currently not a member of any group. Activities that you 
+                        log now will not be available to you once you join a group.
+                    </p>
+                    <br>
+                <% end %>
+                <%= form_tag onsubmit="submitNewActivity()" do %>
+                    <div class='activitypanel'>
+                        <div class="activity_feature">
+                            <p><label for = "activity_type">Select Activity Type: </label></p>
+                            <div class="form-group">
+                                <select id="activities_actid" class="form-control">
+                                    <% @act_types.each do |actType| %>
+                                        <%= content_tag :option, :name => actType.name, :value => actType.id, :class => "activityOption" do%>
+                                            <%= actType.name %>
+                                        <% end %>
+                                    <% end %>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="activity_feature">
+                            <p><label for = "activity_duration">Enter Activity Duration in Minutes: </label></p>
+                            <%= number_field 'activities', 'duration', :required => true, :step=>'any', :class => "form-control" %>
+                        </div>
+                        <br>
+                        <br>
+                        <div class="activity_feature">
+                            <p><label for = "activity_user">Activity will be recorded under the name of <%= current_user.first_name %> <%= current_user.last_name %></label></p>
+                            <%= hidden_field :activities, :userid, :value => current_user.id %>
+                        </div>
+                        <br>
                     </div>
                     <br>
-                    <br>
-                    <div class="activity_feature">
-                        <p><label for = "activity_user">Activity will be recorded under the name of <%= current_user.first_name %> <%= current_user.last_name %></label></p>
-                        <%= hidden_field :activities, :userid, :value => current_user.id %>
+                    <div class="gradient-buttons">
+                        <button type="submit" onclick="submitNewActivity()" data-dismiss="modal" class='btn center-block btn-lg btn-primary'>Log Data</Button>
                     </div>
-                    <br>
-                </div>
-                <br>
-                <div class="gradient-buttons">
-                    <button type="submit" onclick="submitNewActivity()" data-dismiss="modal" class='btn center-block btn-lg btn-primary'>Log Data</Button>
-                </div>
-            <% end%>
-      </div>
-
-      <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-      </div>
+                <% end%>
+          </div>
+    
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+          </div>
 
     </div>
   </div>
+</div>
+
+<div id="viewActivityModal" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+        
+            <div class="modal-header gradient-buttons">
+                <h4 id="activityTitle"class="modal-title"></h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            
+            <div class="modal-body">
+                <h5 id="activityDuration"></h5>
+                <br>
+                <div id="currentUserContainer" class="gradient-buttons justify-content-center text-center block-center">
+                    <br>
+                    
+                    <br>
+                </div>
+                <br>
+                <p id="activityTimestampMessage"></p>
+            </div>
+            
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
 </div>
