--- a/app/views/activity/show.html.erb
+++ b/app/views/activity/show.html.erb
@@ -5,7 +5,7 @@
         <div class='activitycontainer'>
             <p>Duration: <%= @act.duration %></p>
             <br>
-            <% if @updated %>
+            <% if @act.updated %>
                 <p>Updated at <%= @act.updated_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %A, %B %d, %Y - %Z") %> by <%= @user_name %></p>
             <% else %>
                 <p>Registered at <%= @act.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %A, %B %d, %Y - %Z") %> by <%= @user_name %></p>
